@@ -41,8 +41,9 @@ memcheck monitor commands:
                  leak_check summary any
                  leak_check full kinds indirect,possible
                  leak_check full reachable any limited 100
-  block_list <loss_record_nr>
+  block_list <loss_record_nr> [unlimited*|limited <max_blocks>]
         after a leak search, shows the list of blocks of <loss_record_nr>
+            * = defaults
   who_points_at <addr> [<len>]
         shows places pointing inside <len> (default 1) bytes at <addr>
         (with len 1, only shows "start pointers" pointing exactly to <addr>,
@@ -105,8 +106,9 @@ memcheck monitor commands:
                  leak_check summary any
                  leak_check full kinds indirect,possible
                  leak_check full reachable any limited 100
-  block_list <loss_record_nr>
+  block_list <loss_record_nr> [unlimited*|limited <max_blocks>]
         after a leak search, shows the list of blocks of <loss_record_nr>
+            * = defaults
   who_points_at <addr> [<len>]
         shows places pointing inside <len> (default 1) bytes at <addr>
         (with len 1, only shows "start pointers" pointing exactly to <addr>,
